[metadata]
name = aiohmi
summary = AIO Hardware Management Implementation (redfish and ipmi)
description_file =
    README
author = Jarrod Johnson
author_email = jjohnson2@lenovo.com
home_page = http://github.com/jjohnson42/aiohmi
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages =
    aiohmi

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    aiohmicons = aiohmi.cmd.aiohmicons:main
    aiohmiutil = aiohmi.cmd.aiohmiutil:main
    virshbmc = aiohmi.cmd.virshbmc:main
    fakebmc = aiohmi.cmd.fakebmc:main
